Update AI Resume Builder with new features and fixes